[metadata]
name = mtweepy
version = 0.0.1
author = Souvic Chakraborty
author_email = chakra.souvic@gmail.com
description = Automates using multiple apps for tweepy with common input using multiprocessing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/souvic/mtweepy
project_urls =
    Bug Tracker = https://github.com/souvic/mtweepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	requests>=2.24.0
	requests_oauthlib>=1.3.0
	tweepy>=3.9.0
[options.packages.find]
where = src

