[metadata]
name = {package_name}
version = 0.0.1
author = {author_name}
author_email = {author_email}
description = Provides a basic package structure
long_description = file: README.md
long_description_content_type = text/markdown
url = {rep_url}
project_urls =
    Bug Tracker = {rep_url}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >={python_requires}
install_requires ={install_requires}
[options.packages.find]
where = src

